Fixed namespaces and added some tests

--- a/Tests/Functional/config/default.yml
+++ b/Tests/Functional/config/default.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: framework.yml }
     - { resource: doctrine.yml }
+    - { resource: propel.yml }
     - { resource: twig.yml }
 
 jms_payment_core:
