--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/process": "*",
         "symfony/yaml": "*",
         "sensio/framework-extra-bundle": "*",
-        "propel/propel-bundle": "*",
+        "propel/propel-bundle": "1.2.*",
+        "willdurand/propel-typehintable-behavior": "dev-master",
         "jms/payment-paypal-bundle": "dev-master",
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
