--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0,<2.3-dev",
+        "symfony/framework-bundle": "~2.0",
         "ext-mcrypt": "*"
     },
     "require-dev": {
@@ -34,10 +34,6 @@
         "doctrine/orm": "*",
         "jms/aop-bundle": "*",
         "jms/di-extra-bundle": "*"
-    },
-    "suggest": {
-        "symfony/form": ">=2.1,<2.2-dev",
-        "symfony/validator": ">=2.1,<2.2-dev"
     },
     "minimum-stability": "dev",
     "autoload": {
